React-Helmet lib added. SEO, Open Graph protocol and Twitter Card has been added

--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- SEO -->
+    <meta name="Keywords" content="comida vegana, comida vegana Resistencia Chaco, comidas veganas, comidas veganas Resistencia Chaco, comida vegana sin conservantes, comida vegana porciones abundantes, comida vegana casera, almuerzo vegano, almuerzos vegano, empanadas veganas, tartas veganas, milanesas veganas, medallones veganos">
+    <meta name="language" content="Spanish">
+    <meta name="author" content="Damian Russo (Diseñador), Fede Antonelli (Desarrollador) y Ignacio Gutierrez (Desarrollador)">
+    <meta name="copyright" content="Damian Russo (Diseñador), Fede Antonelli (Desarrollador) y Ignacio Gutierrez (Desarrollador)">
+
+    <!-- Protocolo Open Graph -->
+    <meta property="og:site_name" content="Cosmic Vegano">
+    <meta property="og:author" content="Damian Russo (Diseñador), Fede Antonelli (Desarrollador) y Ignacio Gutierrez (Desarrollador)">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Amplia variedad de comidas veganas | Cosmic Vegano. Hecha por personas para personas">
+    <meta property="og:description" content="Comida vegana en Resistencia, Chaco. Hecha por personas, sin conservantes. Con sabores únicos, de otro planeta, y porciones abundantes. Amplia variedad de comidas veganas: empanadas, tartas, milanesas, medallones, para parrilla, almuerzos y mucho más">
+    <meta property="og:image" content="https://i.ibb.co/8bPMM7J/mila-de-seitan-cosmic-vegano.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="640">
+    <meta property="og:image:height" content="627">
+    <meta property="og:image:alt" content="Foto de nuestro producto estrella, la milanesa de seitán">
+
+    <!-- Twitter Card --> 
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="Amplia variedad de comidas veganas | Cosmic Vegano. Hecha por personas para personas">
+    <meta property="twitter:image" content="https://i.ibb.co/8bPMM7J/mila-de-seitan-cosmic-vegano.jpg">
+    <meta property="twitter:image:alt" content="Foto de nuestro producto estrella, la milanesa de seitán">
+    <meta property="twitter:description" content="Comida vegana en Resistencia, Chaco. Hecha por personas, sin conservantes. Con sabores únicos, de otro planeta, y porciones abundantes. Amplia variedad de comidas veganas: empanadas, tartas, milanesas, medallones, para parrilla, almuerzos y mucho más">
+    
     <title>Cosmic Vegano</title>
   </head>
   <body>
