--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     <meta property="og:site_name" content="Cosmic Vegano">
     <meta property="og:author" content="Damian Russo (Diseñador), Fede Antonelli (Desarrollador) y Ignacio Gutierrez (Desarrollador)">
     <meta property="og:type" content="website">
+    <meta property="og:url" content="https://cosmicvegano.github.io/cosmic-vegano/">
     <meta property="og:title" content="Amplia variedad de comidas veganas | Cosmic Vegano. Hecha por personas para personas">
     <meta property="og:description" content="Comida vegana en Resistencia, Chaco. Hecha por personas, sin conservantes. Con sabores únicos, de otro planeta, y porciones abundantes. Amplia variedad de comidas veganas: empanadas, tartas, milanesas, medallones, para parrilla, almuerzos y mucho más">
-    <meta property="og:image" content="https://i.ibb.co/8bPMM7J/mila-de-seitan-cosmic-vegano.jpg">
+    <meta property="og:image" content="https://i.ibb.co/sy05mGY/milanesa-seitan-cosmic-vegano.jpg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="640">
-    <meta property="og:image:height" content="627">
+    <meta property="og:image:height" content="427">
     <meta property="og:image:alt" content="Foto de nuestro producto estrella, la milanesa de seitán">
 
     <!-- Twitter Card --> 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:title" content="Amplia variedad de comidas veganas | Cosmic Vegano. Hecha por personas para personas">
-    <meta property="twitter:image" content="https://i.ibb.co/8bPMM7J/mila-de-seitan-cosmic-vegano.jpg">
+    <meta property="twitter:image" content="https://i.ibb.co/sy05mGY/milanesa-seitan-cosmic-vegano.jpg">
     <meta property="twitter:image:alt" content="Foto de nuestro producto estrella, la milanesa de seitán">
     <meta property="twitter:description" content="Comida vegana en Resistencia, Chaco. Hecha por personas, sin conservantes. Con sabores únicos, de otro planeta, y porciones abundantes. Amplia variedad de comidas veganas: empanadas, tartas, milanesas, medallones, para parrilla, almuerzos y mucho más">
     
