Open Graph protocol URL fixed. Coming soon image and new category images added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:site_name" content="Cosmic Vegano">
     <meta property="og:author" content="Damian Russo (Diseñador), Fede Antonelli (Desarrollador) y Ignacio Gutierrez (Desarrollador)">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://cosmicvegano.github.io/cosmic-vegano/">
+    <meta property="og:url" content="https://cosmicvegano.com.ar">
     <meta property="og:title" content="Amplia variedad de comidas veganas | Cosmic Vegano. Hechas por personas para personas">
     <meta property="og:description" content="Comida vegana en Resistencia, Chaco. Hecha por personas, sin conservantes. Con sabores únicos, de otro planeta, y porciones abundantes. Amplia variedad de comidas veganas: empanadas, tartas, milanesas, medallones, para parrilla, almuerzos y mucho más">
     <meta property="og:image" content="https://i.ibb.co/sy05mGY/milanesa-seitan-cosmic-vegano.jpg">
