Google Analytics added

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6P9BTZF8CH"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-6P9BTZF8CH');
+    </script>
+
     <title>Cosmic Vegano</title>
   </head>
   <body>
